@@ -1,3 +1,12 @@
+2008-07-08  Neal H. Walfield  <neal@gnu.org>
+
+	* Makefile.am (modules.h): Generate an array of arguments from
+	each module's command line.
+	(ruth_commandline): Don't quote arguments.
+	* hieronymus.c (struct module): Remove field commandline, replace
+	with args.
+	(main): Create the argument vector based on the MODULES[I].ARGS.
+
 2008-07-04  Neal H. Walfield  <neal@gnu.org>
 
 	* Makefile.am (all-local) [ENABLE_TESTS]: Don't define target in
